# AS-bot

./: Dockerfile  README.md  requirements.txt
app/: config.py  main.py
app/database/: __init__.py
app/routes/: jobs.py  main.py  plc.py  tcp_modbus.py
app/schemas/: data.py  jobs.py  sensor.py
app/service/: base.py  jobs.py  opc.py  sensor.py  tcp_modbus.py  telegram.py  websocket.py
app/utils/: __init__.py  message.py  plot.py  time.py
scheduler-sync-pro-main/: example.env  pyproject.toml
scheduler-sync-pro-main/app/database/: mongodb.py
scheduler-sync-pro-main/app/routes/: opc.py
scheduler-sync-pro-main/app/service/: data.py  idle.py  plc.py  scheduler.py
